<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_drawer_equalizer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/bottom_sheet_paddingHorizontal"
    android:paddingVertical="@dimen/bottom_sheet_paddingVertical">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle_equalizer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_star_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starry_sky_config_n_of_stars"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/drag_handle_equalizer" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_star_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stepSize="5"
        android:valueFrom="0"
        android:valueTo="70"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_star_num" />

    <TextView
        android:id="@+id/tv_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starry_sky_config_speed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slider_star_num" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stepSize="0.5"
        android:value="1"
        android:valueFrom="0.5"
        android:valueTo="5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_speed" />


    <TextView
        android:id="@+id/tv_mash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starry_sky_config_mash"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slider_speed" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_mash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stepSize="10"
        android:value="0"
        android:valueFrom="0"
        android:valueTo="80"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_mash" />

</LinearLayout>